refactor: Update analysis reports and improve JVM memory settings documentation
- Enhanced the Aerospike Vector Search cluster analysis report with detailed JVM memory settings recommendations.
- Updated node analysis to reflect current resource utilization and health status, emphasizing the absence of AVS pods.
- Improved formatting and clarity in reporting, including the removal of redundant sections and the addition of emojis for better engagement.
- Adjusted JVM command line output for consistency across different nodes.