@@ -1,92 +1,86 @@
-### 🖥️ Node Analysis: ip-192-168-52-147.ec2.internal
+### 🖥️ Node Analysis: `ip-192-168-52-147.ec2.internal`
 
-#### Node Capacity and Allocatable Resources
-- **CPU Capacity**: 8 cores
-- **Memory Capacity**: 62GB
-- **Allocatable CPU**: 7910m (7.91 cores)
-- **Allocatable Memory**: 61GB
-- **Pods Capacity**: 58
+#### Node Capacity and Conditions
+- **CPU**: 8 cores
+- **Memory**: 65,023,384 Ki (~62 GB)
+- **Pods**: 58
+- **Conditions**: 
+  - MemoryPressure: `False` (Sufficient memory)
+  - DiskPressure: `False` (No disk pressure)
+  - PIDPressure: `False` (Sufficient PID)
+  - Ready: `True` (Node is ready)
 
-#### Node Conditions
-- **MemoryPressure**: False (Sufficient memory available)
-- **DiskPressure**: False (No disk pressure)
-- **PIDPressure**: False (Sufficient PID available)
-- **Ready**: True (Node is ready)
-
-#### Cloud Provider Details
-- **Provider**: AWS
-- **Instance Type**: r5.2xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1d
+#### Cloud Provider and Instance Type
+- **Cloud Provider**: AWS
+- **Instance Type**: `r5.2xlarge`
+- **Region/Zone**: `us-east-1/us-east-1d`
 
 #### Resource Allocation and Utilization
-- **CPU Requests**: 230m (2% of allocatable)
-- **CPU Limits**: 400m (5% of allocatable)
-- **Memory Requests**: 724Mi (1% of allocatable)
-- **Memory Limits**: 1280Mi (2% of allocatable)
+- **CPU Requests**: 220m (2%)
+- **CPU Limits**: 400m (5%)
+- **Memory Requests**: 674Mi (1%)
+- **Memory Limits**: 1280Mi (2%)
+- **No significant OOM events**: 👍
 
-#### Node-Level Issues or Warnings
-- No OOMKill events or system-level warnings detected.
+### 🧵 Pod Analysis: `avs-app-aerospike-vector-search-0`
 
-### 🧵 Pod Analysis: avs-app-aerospike-vector-search-0
-
-#### Configuration Validation
-- **Node Roles**: Correctly set as `standalone-indexer`.
-- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
-- **Listener Addresses**: Advertised listener correctly set to the external IP.
-- **Interconnect Settings**: Ports configured to listen on all interfaces.
+#### Configuration Validation (`aerospike-vector-search.yml`)
+- **Node Roles**: Correctly set as `standalone-indexer`
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy
+- **Listener Addresses**: Advertised listener correctly set to external IP `3.238.188.22`
+- **Interconnect Settings**: Open on `0.0.0.0:5001`, which is appropriate for internal communication
 
 #### JVM Configuration
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: 1GB
-  - **Maximum Heap Size (-Xmx)**: ~51GB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: ~51GB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MB
-  - **Code Heap Sizes**: NonNMethod: ~5.6MB, NonProfiled: ~117MB, Profiled: ~117MB
+  - Initial Heap Size: `-Xms` not explicitly set
+  - Maximum Heap Size: `-Xmx50799m` (~49.6 GB)
+  - Soft Max Heap Size: `-XX:SoftMaxHeapSize=53267m`
+  - Reserved Code Cache Size: `-XX:ReservedCodeCacheSize=240m`
+  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled set appropriately
 
 - **GC Settings**:
-  - **GC Type**: ZGC
-  - **GC Thread Counts**: ZYoungGCThreads: 2, ZOldGCThreads: 2
-  - **GC-Specific Flags**: ZGenerational enabled
+  - GC Type: `-XX:+UseZGC` (Z Garbage Collector)
+  - GC Threads: `-XX:ZYoungGCThreads=2`, `-XX:ZOldGCThreads=2`
+  - GC-specific flags: `-XX:+ZGenerational` enabled
 
 - **Other Important Flags**:
-  - **NUMA Settings**: NUMA and NUMAInterleaving not used
-  - **Compressed Oops**: Not explicitly disabled
-  - **Pre-touch Settings**: AlwaysPreTouch enabled
-  - **Compiler Settings**: CICompilerCount set to 4
-  - **Exit on OOM**: Enabled
+  - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving` (NUMA not used)
+  - Compressed oops: Not explicitly disabled, likely enabled by default
+  - Pre-touch settings: `-XX:+AlwaysPreTouch` (pre-touch memory)
+  - Compiler settings: `-XX:CICompilerCount=4`
+  - Exit on OOM: `-XX:+ExitOnOutOfMemoryError` (ensures JVM exits on OOM)
 
 - **Module and Package Settings**:
-  - **Added Modules**: jdk.incubator.vector
-  - **Opened Packages**: Multiple packages opened for internal access
-  - **Exported Packages**: Several packages exported for internal use
+  - Added modules: `--add-modules jdk.incubator.vector`
+  - Opened packages: Multiple packages opened for internal access
+  - Exported packages: Several packages exported for internal use
 
-#### GC.heap_info Analysis
-- **Current Heap Usage**: ~1GB
-- **Heap Capacity**: ~4.6GB
-- **Max Capacity**: ~51GB
-- **Metaspace Usage**: ~79MB
-- **Class Space Usage**: ~8.6MB
+#### GC Heap Info
+- **Current Heap Usage**: 1240M
+- **Heap Capacity**: 2494M
+- **Max Capacity**: 50800M
+- **Metaspace Usage**: 80,972K
+- **Class Space Usage**: 8,821K
 
-#### Config-Injection Logs
-- No failed config-injection logs detected.
-
-### Recommendations
+### 🛠️ Recommendations
 
 1. **Node-Level Optimizations**:
-   - Consider setting explicit CPU and memory requests/limits for all pods to better manage resource allocation and avoid overcommitment.
+   - **CPU and Memory Utilization**: Consider increasing CPU and memory requests for critical pods to ensure resource availability during peak loads.
+   - **Pod Distribution**: Balance pod distribution across nodes to avoid potential resource contention.
 
 2. **Pod-Level Configurations**:
-   - Ensure all pods have defined resource requests and limits to prevent resource starvation.
+   - **Heartbeat Configuration**: Ensure all seed nodes are reachable and update DNS if necessary.
+   - **Listener Security**: If not already secured, consider using network policies to restrict access to interconnect ports.
 
 3. **Resource Allocation Adjustments**:
-   - Review and adjust the resource allocation for non-critical pods to free up resources for AVS.
+   - **JVM Heap Size**: The current max heap size is set close to the node's total memory. Consider reducing `-Xmx` to allow headroom for other processes and avoid potential OOM issues.
 
 4. **Performance Improvements**:
-   - Monitor heap usage and adjust JVM settings if memory usage approaches limits.
-   - Consider enabling NUMA settings if the workload benefits from it.
+   - **GC Tuning**: Monitor ZGC performance and adjust thread counts if necessary to optimize garbage collection times.
+   - **NUMA Awareness**: If running on NUMA hardware, consider enabling NUMA settings for potential performance gains.
 
 5. **JVM Memory Settings**:
-   - The current JVM settings are well-optimized for the node's memory capacity. Regularly monitor and adjust as needed based on application performance and load.
+   - **Initial Heap Size**: Explicitly set `-Xms` to match `-Xmx` for consistent performance.
+   - **Code Cache**: Monitor code cache usage and adjust `-XX:ReservedCodeCacheSize` if necessary.
 
-By addressing these recommendations, you can ensure optimal performance and resource utilization for your Aerospike Vector Search deployment. 🚀
+By addressing these recommendations, you can ensure optimal performance and stability for the Aerospike Vector Search deployment on this node. 🛡️
