@@ -1,4 +1,148 @@
-null
+# Aerospike Vector Search Cluster Analysis Report
+
+## 1. Node Summary Table
+| Node Name                        | Total Memory | Allocatable Memory | AVS Pods on Node (Name, Role) | JVM Configuration | Instance Type | Status/Health |
+|----------------------------------|--------------|-------------------|------------------------------|-------------------|---------------|--------------|
+| ip-192-168-26-117.ec2.internal   | 15896988Ki   | 14880156Ki        | N/A                          | N/A               | m5.xlarge     | Healthy      |
+| ip-192-168-27-123.ec2.internal   | 15896988Ki   | 14880156Ki        | avs-app-aerospike-vector-search-2, query-nodes | ZHeap used 1010M, capacity 1348M, max 12420M | m5.xlarge     | Healthy      |
+| ip-192-168-28-89.ec2.internal    | 16069020Ki   | 15052188Ki        | avs-app-aerospike-vector-search-1, indexer-nodes | ZHeap used 1158M, capacity 1570M, max 12554M | m5.xlarge     | Healthy      |
+| ip-192-168-52-147.ec2.internal   | 65023384Ki   | 64006552Ki        | avs-app-aerospike-vector-search-0, standalone-indexer-nodes | ZHeap used 1240M, capacity 2494M, max 50800M | r5.2xlarge    | Healthy      |
+| ip-192-168-53-124.ec2.internal   | 15896988Ki   | 14880156Ki        | N/A                          | N/A               | m5.xlarge     | Healthy      |
+
+## 🌐 2. Cluster Configuration
+- **Node Distribution and Roles**:
+  - Nodes are distributed across different roles: default-rack, query-nodes, indexer-nodes, standalone-indexer-nodes.
+  - Instance types vary between m5.xlarge and r5.2xlarge, indicating different resource allocations.
+
+- **Endpoint Configuration and Visibility**:
+  - The cluster is accessible via the endpoint `avs-app-aerospike-vector-search-internal:5000`.
+  - Nodes are visible with specific IPs for internal communication.
+
+- **Version Information**:
+  - The cluster is running version 1.1.0.
+
+- **Cluster ID and Networking Setup**:
+  - Cluster ID: 9289716086519169264
+  - Networking is set up in the us-east-1 region with specific zones for each node.
+
+- **Analysis of Node Distribution vs Index Mode**:
+  - The indices are configured in DISTRIBUTED mode, aligning with the node roles and distribution.
+
+## 📊 3. AVS Indices Analysis
+### Index Configuration
+| Index Name | Namespace | Set       | Dimensions | Distance Metric     | HNSW Parameters (ef, efConstruction, m) | Batching & Caching Configurations | Healer & Merge Parameters |
+|------------|-----------|-----------|------------|---------------------|----------------------------------------|----------------------------------|---------------------------|
+| swiftyfan  | avs-data  | swiftyfan | 128        | SQUARED_EUCLIDEAN   | ef: 100, efConstruction: 100, m: 16    | MaxEntries: 2000000, Expiry: 3600000 | MaxScanPageSize: 40000, IndexParallelism: 40 |
+| adama      | avs-data  | adama     | 128        | SQUARED_EUCLIDEAN   | ef: 100, efConstruction: 100, m: 16    | MaxEntries: 2000000, Expiry: 3600000 | MaxScanPageSize: 40000, IndexParallelism: 40 |
+
+### Recommendations for Index Optimization
+- **Vector Dimensions vs Memory Usage**:
+  - Current dimensions are 128, which is optimal for the available memory. Ensure memory allocation aligns with vector size.
+  
+- **Caching Parameters vs Available Memory**:
+  - MaxEntries set to 2000000 with an expiry of 3600000ms. Consider adjusting based on memory usage patterns.
+
+- **Batching Parameters vs Cluster Size**:
+  - Batching parameters are set to handle large volumes. Monitor and adjust based on real-time indexing performance.
+
+## ⚙️ 4. JVM Configuration Analysis
+### JVM Configuration Table
+| Node Name                        | Initial Heap (-Xms) | Max Heap (-Xmx) | Soft Max Heap | Code Cache Settings | GC Type & Version | GC Thread Settings | Other Flags |
+|----------------------------------|---------------------|-----------------|---------------|---------------------|-------------------|--------------------|-------------|
+| ip-192-168-27-123.ec2.internal   | N/A                 | 12420M          | N/A           | N/A                 | N/A               | N/A                | N/A         |
+| ip-192-168-28-89.ec2.internal    | N/A                 | 12554M          | N/A           | N/A                 | N/A               | N/A                | N/A         |
+| ip-192-168-52-147.ec2.internal   | N/A                 | 50800M          | N/A           | N/A                 | N/A               | N/A                | N/A         |
+
+### Current Memory Usage
+- **Used Heap**:
+  - ip-192-168-27-123: 1010M
+  - ip-192-168-28-89: 1158M
+  - ip-192-168-52-147: 1240M
+
+## 💾 5. Memory Analysis
+- **Heap Size vs Container Limits**:
+  - Ensure heap size is within the limits of the container to prevent OOMKills.
+
+- **Memory Distribution Across Regions**:
+  - Memory is well-distributed across nodes, with no current memory pressure.
+
+- **GC Pressure Indicators**:
+  - Monitor GC logs for any signs of pressure or inefficiency.
+
+- **Memory Efficiency Recommendations**:
+  - Optimize heap settings based on application load and memory usage patterns.
+
+## 🔍 6. Performance Configuration Analysis
+- **Index Caching vs JVM Heap Size**:
+  - Ensure index caching does not exceed JVM heap size to prevent memory contention.
+
+- **Batching Parameters vs Available Memory**:
+  - Adjust batching parameters based on available memory and node performance.
+
+- **Thread Settings vs Available CPU**:
+  - Ensure thread settings align with available CPU resources to maximize performance.
+
+## ⚠️ 7. Potential Issues and Recommendations
+- **Memory Configuration Improvements**:
+  - Current Setting: Max heap sizes vary across nodes.
+  - Recommended Value: Align heap sizes with node roles and memory availability.
+  - Rationale: Consistent memory settings improve stability.
+  - Impact: Reduced risk of OOMKills, improved performance.
+  - Implementation: Adjust JVM flags to standardize heap sizes.
+
+- **Index Parameter Optimizations**:
+  - Current Setting: High max entries for caching.
+  - Recommended Value: Adjust based on memory usage patterns.
+  - Rationale: Optimize memory usage.
+  - Impact: Improved memory efficiency.
+  - Implementation: Update index configurations.
+
+## 📈 8. Scaling Considerations
+- **Current Resource Utilization**:
+  - Nodes are currently healthy with no memory pressure.
+  
+- **Headroom for Growth**:
+  - Monitor resource usage to ensure headroom for scaling.
+
+- **Bottleneck Identification**:
+  - No current bottlenecks identified, but monitor for changes in load.
+
+- **Scaling Recommendations**:
+  - Consider adding nodes if load increases significantly.
+
+## 🔄 9. Resource Overview
+| Node Name                        | Total Memory | Allocatable Memory | AVS Pods on Node (Name, Role) | Instance Type | Status/Health |
+|----------------------------------|--------------|-------------------|------------------------------|---------------|--------------|
+| ip-192-168-26-117.ec2.internal   | 15896988Ki   | 14880156Ki        | N/A                          | m5.xlarge     | Healthy      |
+| ip-192-168-27-123.ec2.internal   | 15896988Ki   | 14880156Ki        | avs-app-aerospike-vector-search-2, query-nodes | m5.xlarge     | Healthy      |
+| ip-192-168-28-89.ec2.internal    | 16069020Ki   | 15052188Ki        | avs-app-aerospike-vector-search-1, indexer-nodes | m5.xlarge     | Healthy      |
+| ip-192-168-52-147.ec2.internal   | 65023384Ki   | 64006552Ki        | avs-app-aerospike-vector-search-0, standalone-indexer-nodes | r5.2xlarge    | Healthy      |
+| ip-192-168-53-124.ec2.internal   | 15896988Ki   | 14880156Ki        | N/A                          | m5.xlarge     | Healthy      |
+
+## 📊 10. Node Overview
+| Node Name                        | Pod Name                          | Roles                  | JVM Flags | Memory Request | Memory Limit | Memory Used |
+|----------------------------------|-----------------------------------|------------------------|-----------|----------------|--------------|-------------|
+| ip-192-168-27-123.ec2.internal   | avs-app-aerospike-vector-search-2 | query-nodes            | N/A       | N/A            | N/A          | 1010M       |
+| ip-192-168-28-89.ec2.internal    | avs-app-aerospike-vector-search-1 | indexer-nodes          | N/A       | N/A            | N/A          | 1158M       |
+| ip-192-168-52-147.ec2.internal   | avs-app-aerospike-vector-search-0 | standalone-indexer-nodes | N/A     | N/A            | N/A          | 1240M       |
+
+## ⚠️ 11. OOMKill Analysis
+- **Detailed Timeline of OOMKill Events**:
+  - No OOMKill events found in the current analysis.
+
+- **Analysis**:
+  - JVM heap settings are within limits.
+  - Node memory capacity is sufficient.
+  - No pattern of OOMKills or memory pressure events detected.
+
+### Recommendations
+- **Current Setting**: No OOMKills detected.
+- **Recommended Value**: Continue monitoring.
+- **Rationale for Change**: Ensure stability.
+- **Impact Assessment**: Maintain current stability.
+- **Implementation Steps**: Regular monitoring and adjustments as needed.
+
+This comprehensive report provides an in-depth analysis of the Aerospike Vector Search cluster, highlighting current configurations, potential issues, and recommendations for optimization and scaling.
 
 ## Detailed Node Analysis
 
@@ -7,244 +151,17 @@ null
 
 ### 🖥️ Node Analysis: ip-192-168-26-117.ec2.internal
 
-#### Node Capacity & Allocatable Resources:
-- **CPU Capacity:** 4 cores
-- **Memory Capacity:** 15,896,988 Ki
-- **Allocatable CPU:** 3920m
-- **Allocatable Memory:** 14,880,156 Ki
-- **Pods Capacity & Allocatable:** 58
-
-#### Node Conditions:
-- **Memory Pressure:** ❌ False (Sufficient memory available)
-- **Disk Pressure:** ❌ False (No disk pressure)
-- **PID Pressure:** ❌ False (Sufficient PID available)
-- **Ready Status:** ✅ True (Node is ready)
-
-#### Cloud Provider & Instance Type:
-- **Provider:** AWS
-- **Instance Type:** m5.xlarge
-- **Region:** us-east-1
-- **Zone:** us-east-1b
-
-#### Resource Allocation & Utilization:
-- **CPU Requests:** 190m (4%)
-- **Memory Requests:** 170Mi (1%)
-- **Memory Limits:** 768Mi (5%)
-
-#### Node-Level Issues or Warnings:
-- No OOMKill events or system warnings detected.
-
-### Recommendations for Node-Level Optimizations:
-1. **Resource Requests & Limits:** Consider setting explicit CPU and memory limits for all pods to prevent over-allocation and ensure fair resource distribution.
-2. **Monitoring:** Implement monitoring for CPU and memory usage to identify potential bottlenecks or underutilization.
-3. **Scaling:** Evaluate the need for horizontal scaling if resource utilization approaches capacity limits.
-
-### Pod-Level Analysis:
-- **AVS Pods:** ❌ No Aerospike Vector Search pods found on this node.
-
-### Recommendations for Pod-Level Configurations:
-1. **Pod Distribution:** Ensure AVS pods are evenly distributed across nodes to balance the load and optimize resource usage.
-2. **Node Affinity:** Use node affinity or anti-affinity rules to control pod placement based on node labels or resources.
-
-### Resource Allocation Adjustments:
-- **CPU & Memory Requests:** Review and adjust requests and limits for existing pods to align with actual usage patterns and prevent resource starvation.
-
-### Performance Improvements:
-1. **Node Utilization:** Regularly review node utilization metrics to identify opportunities for optimizing resource allocation.
-2. **Instance Type:** Consider upgrading to a larger instance type if consistent resource constraints are observed.
-
-### JVM Memory Settings (Hypothetical for AVS Pods):
-- **Initial Heap Size (-Xms):** Ensure it's set to a reasonable value based on pod memory requests.
-- **Maximum Heap Size (-Xmx):** Should not exceed the pod's memory limit to avoid OOM kills.
-- **GC Settings:** Use a suitable garbage collector like ZGC for low-latency applications.
-- **NUMA Settings:** If applicable, configure NUMA settings to optimize memory access patterns.
-
-### Conclusion:
-While the node is currently healthy and underutilized, it's essential to continuously monitor resource usage and adjust configurations to maintain optimal performance. Implementing the above recommendations will help in achieving efficient resource utilization and improved application performance. 🚀
-
-### Node: ip-192-168-27-123.ec2.internal
-
-### 🖥️ Node Analysis: ip-192-168-27-123.ec2.internal
-
-#### Node Information
+#### Node Overview
 - **Instance Type**: m5.xlarge
-- **Region/Zone**: us-east-1/us-east-1b
+- **Region/Zone**: us-east-1 / us-east-1b
 - **Capacity**: 
-  - CPU: 4 cores
-  - Memory: 15.2 GiB
-  - Pods: 58
-- **Allocatable**: 
-  - CPU: 3920m
-  - Memory: 14.2 GiB
-- **Conditions**: 
-  - MemoryPressure: False
-  - DiskPressure: False
-  - PIDPressure: False
-  - Ready: True
-
-#### Node Observations
-- **Resource Utilization**: 
-  - CPU Requests: 180m (4%)
-  - Memory Requests: 120Mi (0%)
-  - Memory Limits: 768Mi (5%)
-- **No OOM Events**: No system or Kubernetes OOM events found.
-
-### Recommendations for Node-Level Optimizations
-1. **Resource Requests and Limits**: Ensure that all critical pods have appropriate CPU and memory requests and limits set to avoid overcommitting resources.
-2. **Monitoring**: Implement monitoring for CPU and memory usage to ensure efficient utilization and identify potential bottlenecks.
-3. **Scaling**: Consider scaling the node group if resource utilization consistently approaches capacity.
-
-### 🧵 Pod Analysis: avs-app-aerospike-vector-search-2
-
-#### Configuration Review
-- **Cluster Name**: avs-db-1
-- **Node Roles**: query
-- **Heartbeat Seeds**: Correctly configured with two seeds.
-- **Interconnect Settings**: Listening on all interfaces (0.0.0.0) on port 5001.
-- **Advertised Listeners**: Correctly set to external IP 3.90.200.129 on port 5000.
-
-#### JVM Configuration
-- **Memory Settings**:
-  - Initial Heap Size: 241MB
-  - Maximum Heap Size: 12.4GB
-  - Soft Max Heap Size: 12.4GB
-  - Reserved Code Cache Size: 240MB
-- **GC Settings**:
-  - GC Type: ZGC
-  - GC Threads: Young (1), Old (1)
-  - GC Flags: ZGenerational enabled
-- **Other Flags**:
-  - NUMA: Disabled
-  - Compressed Oops: Disabled
-  - Pre-touch: Enabled
-  - Compiler Threads: 3
-  - Exit on OOM: Enabled
-- **Module and Package Settings**: Various modules and packages are opened and exported for compatibility.
-
-#### Heap Info
-- **Current Heap Usage**: 636MB
-- **Heap Capacity**: 1344MB
-- **Max Capacity**: 12.4GB
-- **Metaspace Usage**: 77MB
-- **Class Space Usage**: 8.4MB
-
-### Recommendations for Pod-Level Configurations
-1. **JVM Memory Settings**: Consider adjusting the initial heap size (-Xms) to be closer to the maximum heap size (-Xmx) for better performance and to reduce GC overhead.
-2. **GC Configuration**: Evaluate the need for more GC threads if the application experiences latency due to garbage collection.
-3. **NUMA Settings**: If running on a NUMA architecture, consider enabling NUMA settings for potential performance improvements.
-
-### Resource Allocation Adjustments
-- **CPU and Memory Requests**: Set explicit CPU and memory requests and limits for the AVS pod to ensure resource availability and prevent resource contention.
-
-### Performance Improvements
-1. **Heap Tuning**: Monitor heap usage and adjust the heap size as needed to ensure efficient memory utilization.
-2. **GC Monitoring**: Continuously monitor GC performance and adjust settings to optimize for latency and throughput.
-
-### JVM Memory Settings
-- **Initial and Max Heap Size**: Align -Xms with -Xmx for stable memory usage.
-- **Code Cache**: Ensure the reserved code cache size is sufficient for the application’s needs.
-
-By implementing these recommendations, you can optimize the performance and reliability of the Aerospike Vector Search pods on this node. 🌟
-
-### Node: ip-192-168-28-89.ec2.internal
-
-### 🚀 Kubernetes Node Analysis: ip-192-168-28-89.ec2.internal
-
-#### 🖥️ Node Overview
-- **Instance Type**: m5.xlarge
-- **Region/Zone**: us-east-1/us-east-1b
-- **Capacity**: 4 CPUs, 16GB Memory
-- **Allocatable**: 3920m CPUs, ~15GB Memory
-- **Node Conditions**: All conditions are healthy (MemoryPressure, DiskPressure, PIDPressure are False; Ready is True).
-
-#### 🏷️ Cloud Provider Details
-- **Provider**: AWS
-- **Instance Type**: m5.xlarge
-- **Capacity Type**: ON_DEMAND
-
-#### 📊 Resource Allocation and Utilization
-- **CPU Requests**: 190m (4%)
-- **CPU Limits**: 400m (10%)
-- **Memory Requests**: 184Mi (1%)
-- **Memory Limits**: 1280Mi (8%)
-
-#### 🔍 Node-Level Issues or Warnings
-- **No OOMKill Events**: Both system and Kubernetes OOM events are absent.
-- **No Node-Level Warnings**: Node is operating without issues.
-
-### 🧵 AVS Pod Analysis: avs-app-aerospike-vector-search-1
-
-#### 📄 Configuration Review: aerospike-vector-search.yml
-- **Node Roles**: index-update
-- **Heartbeat Seeds**: Correctly configured with two seeds.
-- **Listener Addresses**: Configured to listen on 0.0.0.0, which is appropriate for internal communication.
-- **Interconnect Settings**: Port 5001 is open for interconnect.
-
-#### 📦 JVM Configuration Analysis
-- **Memory Settings**:
-  - **Initial Heap Size**: Not explicitly set, defaults to 243MB.
-  - **Maximum Heap Size (-Xmx)**: 12.5GB
-  - **Soft Max Heap Size**: 12.5GB
-  - **Reserved Code Cache Size**: 240MB
-  - **Code Heap Sizes**: NonNMethod: 5.6MB, NonProfiled: 122MB, Profiled: 122MB
-
-- **GC Settings**:
-  - **GC Type**: ZGC with generational support
-  - **GC Threads**: 1 thread each for young and old generation collections
-  - **GC Flags**: ZGenerational enabled
-
-- **Other Important Flags**:
-  - **NUMA Settings**: Disabled
-  - **Compressed Oops**: Disabled
-  - **Pre-touch Settings**: Enabled
-  - **Compiler Settings**: CICompilerCount set to 3
-  - **Exit on OOM**: Enabled
-
-- **Module and Package Settings**:
-  - **Added Modules**: jdk.incubator.vector
-  - **Opened Packages**: Various internal Java packages for enhanced access
-  - **Exported Packages**: Several packages for internal use
-
-#### 📈 GC.heap_info Analysis
-- **Current Heap Usage**: 1120MB
-- **Heap Capacity**: 1666MB
-- **Max Capacity**: 12.5GB
-- **Metaspace Usage**: 82MB
-- **Class Space Usage**: 8.9MB
-
-#### 🛠️ Config-Injection Logs
-- **No Failed Config-Injection Logs**: Configuration injection completed successfully.
-
-### 📌 Recommendations
-
-#### 1. Node-Level Optimizations
-- **CPU and Memory Utilization**: Consider increasing resource requests to better reflect actual usage and prevent potential throttling.
-
-#### 2. Pod-Level Configurations
-- **Heartbeat Configuration**: Ensure all seeds are reachable and correctly configured to prevent split-brain scenarios.
-
-#### 3. Resource Allocation Adjustments
-- **CPU and Memory Requests**: Adjust requests to match usage patterns, ensuring pods have sufficient resources without overcommitting.
-
-#### 4. Performance Improvements
-- **GC Optimization**: Monitor ZGC performance; consider adjusting thread counts based on workload characteristics.
-
-#### 5. JVM Memory Settings
-- **Heap Size**: Ensure -Xmx is set appropriately based on node capacity and application needs.
-- **Compressed Oops**: Consider enabling if memory savings are needed and performance impact is acceptable.
-
-By addressing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on this Kubernetes node.
-
-### Node: ip-192-168-52-147.ec2.internal
-
-### 🖥️ Node Analysis: ip-192-168-52-147.ec2.internal
-
-#### Node Capacity and Allocatable Resources
-- **CPU Capacity**: 8 cores
-- **Memory Capacity**: 62GB
-- **Allocatable CPU**: 7910m (7.91 cores)
-- **Allocatable Memory**: 61GB
-- **Pods Capacity**: 58
+  - **CPU**: 4 cores
+  - **Memory**: 15896 MiB
+  - **Ephemeral Storage**: 83 GiB
+- **Allocatable Resources**:
+  - **CPU**: 3920m
+  - **Memory**: 14880 MiB
+  - **Pods**: 58
 
 #### Node Conditions
 - **MemoryPressure**: False (Sufficient memory available)
@@ -252,140 +169,388 @@ By addressing these recommendations, you can enhance the performance and reliabi
 - **PIDPressure**: False (Sufficient PID available)
 - **Ready**: True (Node is ready)
 
-#### Cloud Provider Details
+#### Resource Allocation
+- **CPU Requests**: 190m (4%)
+- **Memory Requests**: 170 MiB (1%)
+- **Memory Limits**: 768 MiB (5%)
+
+#### Observations
+- The node is healthy with no memory, disk, or PID pressure.
+- Resource utilization is low, indicating potential for more workload.
+
+### 🏷️ Cloud Provider Details
 - **Provider**: AWS
-- **Instance Type**: r5.2xlarge
+- **Instance Type**: m5.xlarge
+- **Capacity Type**: ON_DEMAND
+
+### 🔍 Node-Level Recommendations
+1. **Optimize Resource Requests**: Consider increasing resource requests for critical pods to ensure they have enough resources during peak loads.
+2. **Monitor Utilization**: Keep an eye on resource utilization to ensure efficient use of the node's capacity.
+
+### ❌ Pod Analysis
+- No Aerospike Vector Search (AVS) pods are currently running on this node.
+
+### 📈 General Recommendations
+1. **Node-Level Optimizations**:
+   - **Resource Allocation**: Adjust resource requests and limits based on actual usage patterns.
+   - **Scaling**: Consider scaling down if the node is consistently underutilized to save costs.
+   
+2. **Pod-Level Configurations**:
+   - **Node Affinity**: Ensure AVS pods are scheduled on nodes with sufficient resources and appropriate labels.
+   
+3. **Performance Improvements**:
+   - **Monitoring**: Implement monitoring tools to track node and pod performance metrics.
+   - **Alerts**: Set up alerts for resource thresholds to preemptively address potential issues.
+
+4. **JVM Memory Settings**:
+   - **Heap Size**: Ensure JVM settings for AVS pods are optimized for the workload, adjusting heap sizes as necessary.
+   - **Garbage Collection**: Use appropriate GC settings to minimize pause times and optimize throughput.
+
+### 🚀 Conclusion
+The node is well-configured and healthy, but there is room for optimization in terms of resource allocation and monitoring. Since no AVS pods are present, ensure that when they are deployed, they are configured with optimal JVM settings and resource requests to maximize performance.
+
+### Node: ip-192-168-27-123.ec2.internal
+
+# 🚀 Kubernetes Node and Aerospike Vector Search (AVS) Pod Analysis
+
+## 🖥️ Node Analysis: `ip-192-168-27-123.ec2.internal`
+
+### Node Capacity and Conditions
+- **CPU**: 4 cores
+- **Memory**: 15.8 GiB
+- **Storage**: 80 GiB
+- **Allocatable**: 
+  - **CPU**: 3920m
+  - **Memory**: 14.8 GiB
+  - **Pods**: 58
+- **Conditions**: 
+  - MemoryPressure: `False` (Sufficient memory)
+  - DiskPressure: `False` (No disk pressure)
+  - PIDPressure: `False` (Sufficient PID)
+  - Ready: `True` (Node is ready)
+
+### Cloud Provider and Instance Type
+- **Provider**: AWS
+- **Instance Type**: m5.xlarge
 - **Region**: us-east-1
-- **Zone**: us-east-1d
+- **Zone**: us-east-1b
+
+### Resource Allocation and Utilization
+- **CPU Requests**: 190m (4% of capacity)
+- **Memory Requests**: 170Mi (1% of capacity)
+- **Memory Limits**: 768Mi (5% of capacity)
+
+### Node-Level Issues
+- No OOM events detected.
+- No node-level warnings or issues reported.
+
+## 🧵 Pod Analysis: `avs-app-aerospike-vector-search-2`
+
+### Aerospike Vector Search Configuration
+- **Node Roles**: Query
+- **Heartbeat Seeds**: 
+  - avs-app-aerospike-vector-search-0
+  - avs-app-aerospike-vector-search-1
+- **Interconnect**: Port 5001 on all interfaces
+- **Advertised Listeners**: External IP `3.90.200.129` on port 5000
+
+### JVM Configuration
+- **Memory Settings**:
+  - Initial Heap Size: 241 MB
+  - Maximum Heap Size: 12.4 GiB
+  - Soft Max Heap Size: 12.4 GiB
+  - Reserved Code Cache Size: 240 MB
+- **GC Settings**:
+  - GC Type: ZGC
+  - GC Threads: 1 for young and old generation
+  - GC-specific Flags: ZGenerational
+- **Other Important Flags**:
+  - NUMA Settings: Disabled
+  - Compressed Oops: Disabled
+  - Pre-touch: Enabled
+  - Exit on OOM: Enabled
+- **Module and Package Settings**:
+  - Added Modules: `jdk.incubator.vector`
+  - Opened Packages: Multiple Java base packages
+
+### GC Heap Info
+- **Current Heap Usage**: 1010 MB
+- **Heap Capacity**: 1348 MB
+- **Max Capacity**: 12.4 GiB
+- **Metaspace Usage**: 77.6 MB
+- **Class Space Usage**: 8.4 MB
+
+### Config-Injection Logs
+- No failed config-injection logs detected.
+
+## 🛠️ Recommendations
+
+### 1. Node-Level Optimizations
+- **CPU Utilization**: Consider increasing CPU requests for critical pods to ensure they have sufficient resources during peak loads.
+- **Memory Utilization**: Monitor memory usage to ensure it remains within limits, especially under load.
+
+### 2. Pod-Level Configurations
+- **Heartbeat Configuration**: Ensure all seed nodes are correctly configured and reachable to maintain cluster stability.
+- **Listener Configuration**: Verify that the advertised listeners are correctly set for external communication.
+
+### 3. Resource Allocation Adjustments
+- **CPU and Memory Requests**: Adjust requests and limits based on actual usage patterns to optimize resource allocation.
+- **Pod Distribution**: Consider spreading pods across nodes to balance load and improve fault tolerance.
+
+### 4. Performance Improvements
+- **JVM Tuning**: Fine-tune JVM settings based on application performance metrics to optimize garbage collection and memory usage.
+- **GC Threads**: Consider increasing GC thread counts if CPU resources allow, to improve garbage collection efficiency.
+
+### 5. JVM Memory Settings
+- **Heap Size**: Ensure the maximum heap size is set appropriately based on available node memory and application needs.
+- **Code Cache**: Monitor the reserved code cache size to ensure it is sufficient for the application workload.
+
+By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on Kubernetes. 🛡️
+
+### Node: ip-192-168-28-89.ec2.internal
+
+### 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
+
+#### Node Capacity and Conditions
+- **CPU**: 4 cores
+- **Memory**: 15.3 GiB allocatable
+- **Disk**: 76.2 GiB allocatable
+- **Pods**: 58 max
+- **Conditions**: 
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
+
+#### Cloud Provider and Instance Type
+- **Provider**: AWS
+- **Instance Type**: m5.xlarge
+- **Region**: us-east-1
+- **Zone**: us-east-1b
 
 #### Resource Allocation and Utilization
-- **CPU Requests**: 230m (2% of allocatable)
-- **CPU Limits**: 400m (5% of allocatable)
-- **Memory Requests**: 724Mi (1% of allocatable)
-- **Memory Limits**: 1280Mi (2% of allocatable)
+- **CPU Requests**: 190m (4%)
+- **CPU Limits**: 400m (10%)
+- **Memory Requests**: 184Mi (1%)
+- **Memory Limits**: 1280Mi (8%)
+- **No OOM events detected**
 
-#### Node-Level Issues or Warnings
-- No OOMKill events or system-level warnings detected.
+#### Node-Level Recommendations
+1. **Resource Requests**: Increase CPU and memory requests for critical pods to ensure they have enough resources during peak loads.
+2. **Monitoring**: Set up alerts for memory and CPU usage to prevent potential resource saturation.
 
-### 🧵 Pod Analysis: avs-app-aerospike-vector-search-0
+---
 
-#### Configuration Validation
-- **Node Roles**: Correctly set as `standalone-indexer`.
-- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
-- **Listener Addresses**: Advertised listener correctly set to the external IP.
-- **Interconnect Settings**: Ports configured to listen on all interfaces.
+### 🧵 Pod Analysis: avs-app-aerospike-vector-search-1
+
+#### Configuration Review
+- **Node Roles**: Correctly set to `index-update`.
+- **Heartbeat Seeds**: Configured with two seeds for redundancy.
+- **Listener Addresses**: Properly set to `0.0.0.0` for interconnect.
+- **Advertised Listeners**: Correctly advertised with external IP and port.
 
 #### JVM Configuration
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: 1GB
-  - **Maximum Heap Size (-Xmx)**: ~51GB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: ~51GB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MB
-  - **Code Heap Sizes**: NonNMethod: ~5.6MB, NonProfiled: ~117MB, Profiled: ~117MB
+  - Initial Heap Size: Not explicitly set
+  - Maximum Heap Size: `-Xmx12553m`
+  - Soft Max Heap Size: `-XX:SoftMaxHeapSize=13163823104`
+  - Reserved Code Cache Size: `-XX:ReservedCodeCacheSize=251658240`
+  - Code Heap Sizes:
+    - NonNMethod: `5832780`
+    - NonProfiled: `122912730`
+    - Profiled: `122912730`
 
 - **GC Settings**:
-  - **GC Type**: ZGC
-  - **GC Thread Counts**: ZYoungGCThreads: 2, ZOldGCThreads: 2
-  - **GC-Specific Flags**: ZGenerational enabled
+  - GC Type: `-XX:+UseZGC`
+  - GC Thread Counts: `-XX:ZYoungGCThreads=1`, `-XX:ZOldGCThreads=1`
+  - GC-specific Flags: `-XX:+ZGenerational`
 
 - **Other Important Flags**:
-  - **NUMA Settings**: NUMA and NUMAInterleaving not used
-  - **Compressed Oops**: Not explicitly disabled
-  - **Pre-touch Settings**: AlwaysPreTouch enabled
-  - **Compiler Settings**: CICompilerCount set to 4
-  - **Exit on OOM**: Enabled
+  - NUMA Settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`
+  - Compressed Oops: `-XX:-UseCompressedOops`
+  - Pre-touch Settings: `-XX:+AlwaysPreTouch`
+  - Compiler Settings: `-XX:CICompilerCount=3`
+  - Exit on OOM: `-XX:+ExitOnOutOfMemoryError`
 
 - **Module and Package Settings**:
-  - **Added Modules**: jdk.incubator.vector
-  - **Opened Packages**: Multiple packages opened for internal access
-  - **Exported Packages**: Several packages exported for internal use
+  - Added Modules: `--add-modules jdk.incubator.vector`
+  - Opened Packages: Multiple packages opened for unnamed modules
+  - Exported Packages: Multiple packages exported for unnamed modules
 
 #### GC.heap_info Analysis
-- **Current Heap Usage**: ~1GB
-- **Heap Capacity**: ~4.6GB
-- **Max Capacity**: ~51GB
-- **Metaspace Usage**: ~79MB
-- **Class Space Usage**: ~8.6MB
+- **Current Heap Usage**: 1158M
+- **Heap Capacity**: 1570M
+- **Max Capacity**: 12554M
+- **Metaspace Usage**: 82.5M
+- **Class Space Usage**: 8.9M
 
-#### Config-Injection Logs
-- No failed config-injection logs detected.
+#### Pod-Level Recommendations
+1. **JVM Memory**: Consider setting an initial heap size (`-Xms`) to reduce dynamic memory allocation overhead.
+2. **GC Threads**: Evaluate increasing `ZYoungGCThreads` and `ZOldGCThreads` if GC pauses are affecting performance.
+3. **Compressed Oops**: Enable `-XX:+UseCompressedOops` if applicable to save memory.
 
-### Recommendations
+---
 
+### 📈 Performance and Resource Recommendations
 1. **Node-Level Optimizations**:
-   - Consider setting explicit CPU and memory requests/limits for all pods to better manage resource allocation and avoid overcommitment.
+   - **Resource Requests**: Align requests and limits with actual usage to optimize resource allocation.
+   - **Monitoring**: Implement detailed monitoring for CPU and memory to detect anomalies.
 
 2. **Pod-Level Configurations**:
-   - Ensure all pods have defined resource requests and limits to prevent resource starvation.
+   - **Heartbeat Configuration**: Ensure all seeds are reachable and properly configured.
+   - **JVM Tuning**: Adjust JVM settings based on application performance metrics.
 
 3. **Resource Allocation Adjustments**:
-   - Review and adjust the resource allocation for non-critical pods to free up resources for AVS.
+   - **CPU and Memory**: Re-evaluate resource requests and limits for the AVS pod to ensure optimal performance.
 
 4. **Performance Improvements**:
-   - Monitor heap usage and adjust JVM settings if memory usage approaches limits.
-   - Consider enabling NUMA settings if the workload benefits from it.
+   - **GC Tuning**: Monitor GC performance and adjust thread counts and heap sizes as necessary.
+   - **Network Configuration**: Ensure network settings are optimized for low latency and high throughput.
 
 5. **JVM Memory Settings**:
-   - The current JVM settings are well-optimized for the node's memory capacity. Regularly monitor and adjust as needed based on application performance and load.
+   - **Initial Heap Size**: Set `-Xms` to match `-Xmx` to avoid runtime heap resizing.
+   - **Heap Size**: Regularly review and adjust `-Xmx` based on application needs and node capacity.
 
-By addressing these recommendations, you can ensure optimal performance and resource utilization for your Aerospike Vector Search deployment. 🚀
+By following these recommendations, you can enhance the stability and performance of your Aerospike Vector Search deployment. 🚀
+
+### Node: ip-192-168-52-147.ec2.internal
+
+### 🖥️ Node Analysis: `ip-192-168-52-147.ec2.internal`
+
+#### Node Capacity and Conditions
+- **CPU**: 8 cores
+- **Memory**: 65,023,384 Ki (~62 GB)
+- **Pods**: 58
+- **Conditions**: 
+  - MemoryPressure: `False` (Sufficient memory)
+  - DiskPressure: `False` (No disk pressure)
+  - PIDPressure: `False` (Sufficient PID)
+  - Ready: `True` (Node is ready)
+
+#### Cloud Provider and Instance Type
+- **Cloud Provider**: AWS
+- **Instance Type**: `r5.2xlarge`
+- **Region/Zone**: `us-east-1/us-east-1d`
+
+#### Resource Allocation and Utilization
+- **CPU Requests**: 220m (2%)
+- **CPU Limits**: 400m (5%)
+- **Memory Requests**: 674Mi (1%)
+- **Memory Limits**: 1280Mi (2%)
+- **No significant OOM events**: 👍
+
+### 🧵 Pod Analysis: `avs-app-aerospike-vector-search-0`
+
+#### Configuration Validation (`aerospike-vector-search.yml`)
+- **Node Roles**: Correctly set as `standalone-indexer`
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy
+- **Listener Addresses**: Advertised listener correctly set to external IP `3.238.188.22`
+- **Interconnect Settings**: Open on `0.0.0.0:5001`, which is appropriate for internal communication
+
+#### JVM Configuration
+- **Memory Settings**:
+  - Initial Heap Size: `-Xms` not explicitly set
+  - Maximum Heap Size: `-Xmx50799m` (~49.6 GB)
+  - Soft Max Heap Size: `-XX:SoftMaxHeapSize=53267m`
+  - Reserved Code Cache Size: `-XX:ReservedCodeCacheSize=240m`
+  - Code Heap Sizes: NonNMethod, NonProfiled, Profiled set appropriately
+
+- **GC Settings**:
+  - GC Type: `-XX:+UseZGC` (Z Garbage Collector)
+  - GC Threads: `-XX:ZYoungGCThreads=2`, `-XX:ZOldGCThreads=2`
+  - GC-specific flags: `-XX:+ZGenerational` enabled
+
+- **Other Important Flags**:
+  - NUMA settings: `-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving` (NUMA not used)
+  - Compressed oops: Not explicitly disabled, likely enabled by default
+  - Pre-touch settings: `-XX:+AlwaysPreTouch` (pre-touch memory)
+  - Compiler settings: `-XX:CICompilerCount=4`
+  - Exit on OOM: `-XX:+ExitOnOutOfMemoryError` (ensures JVM exits on OOM)
+
+- **Module and Package Settings**:
+  - Added modules: `--add-modules jdk.incubator.vector`
+  - Opened packages: Multiple packages opened for internal access
+  - Exported packages: Several packages exported for internal use
+
+#### GC Heap Info
+- **Current Heap Usage**: 1240M
+- **Heap Capacity**: 2494M
+- **Max Capacity**: 50800M
+- **Metaspace Usage**: 80,972K
+- **Class Space Usage**: 8,821K
+
+### 🛠️ Recommendations
+
+1. **Node-Level Optimizations**:
+   - **CPU and Memory Utilization**: Consider increasing CPU and memory requests for critical pods to ensure resource availability during peak loads.
+   - **Pod Distribution**: Balance pod distribution across nodes to avoid potential resource contention.
+
+2. **Pod-Level Configurations**:
+   - **Heartbeat Configuration**: Ensure all seed nodes are reachable and update DNS if necessary.
+   - **Listener Security**: If not already secured, consider using network policies to restrict access to interconnect ports.
+
+3. **Resource Allocation Adjustments**:
+   - **JVM Heap Size**: The current max heap size is set close to the node's total memory. Consider reducing `-Xmx` to allow headroom for other processes and avoid potential OOM issues.
+
+4. **Performance Improvements**:
+   - **GC Tuning**: Monitor ZGC performance and adjust thread counts if necessary to optimize garbage collection times.
+   - **NUMA Awareness**: If running on NUMA hardware, consider enabling NUMA settings for potential performance gains.
+
+5. **JVM Memory Settings**:
+   - **Initial Heap Size**: Explicitly set `-Xms` to match `-Xmx` for consistent performance.
+   - **Code Cache**: Monitor code cache usage and adjust `-XX:ReservedCodeCacheSize` if necessary.
+
+By addressing these recommendations, you can ensure optimal performance and stability for the Aerospike Vector Search deployment on this node. 🛡️
 
 ### Node: ip-192-168-53-124.ec2.internal
 
 ### 🖥️ Node Analysis: ip-192-168-53-124.ec2.internal
 
-#### Node Capacity & Conditions
-- **CPU Capacity**: 4 cores
-- **Memory Capacity**: 15,896,988 Ki (~15.16 Gi)
-- **Allocatable CPU**: 3920m
-- **Allocatable Memory**: 14,880,156 Ki (~14.18 Gi)
-- **Pod Capacity**: 58
-- **Conditions**: 
-  - **MemoryPressure**: False (Sufficient memory)
-  - **DiskPressure**: False (No disk pressure)
-  - **PIDPressure**: False (Sufficient PID)
-  - **Ready**: True (Node is ready)
+#### Node Capacity and Allocatable Resources
+- **CPU Capacity:** 4 cores
+- **Memory Capacity:** 15,896,988 Ki (~15.16 GiB)
+- **Allocatable CPU:** 3920m
+- **Allocatable Memory:** 14,880,156 Ki (~14.18 GiB)
+- **Pods Capacity:** 58
 
-#### Cloud Provider & Instance Type
-- **Provider**: AWS
-- **Instance Type**: m5.xlarge
-- **Region**: us-east-1
-- **Zone**: us-east-1d
+#### Node Conditions
+- **Memory Pressure:** False (Sufficient memory available)
+- **Disk Pressure:** False (No disk pressure)
+- **PID Pressure:** False (Sufficient PID available)
+- **Ready:** True (Node is ready)
 
-#### Resource Allocation & Utilization
-- **CPU Requests**: 12% of total capacity
-- **Memory Requests**: 5% of total capacity
-- **Memory Limits**: 28% of total capacity
-- **Ephemeral Storage**: Not utilized
+#### Cloud Provider Details
+- **Provider:** AWS
+- **Instance Type:** m5.xlarge
+- **Region:** us-east-1
+- **Zone:** us-east-1d
+
+#### Resource Allocation and Utilization
+- **CPU Requests:** 500m (12% of allocatable)
+- **Memory Requests:** 740Mi (5% of allocatable)
+- **Memory Limits:** 4180Mi (28% of allocatable)
 
 #### Node-Level Issues or Warnings
-- **OOM Events**: None
-- **Node Events**: None
+- **No OOMKill Events:** No system or Kubernetes OOM events found.
+- **No AVS Pods:** There are no Aerospike Vector Search pods running on this node.
 
-### Recommendations for Node-Level Optimizations
-1. **Resource Utilization**: Consider increasing resource requests for critical pods to ensure they have sufficient resources during peak loads.
-2. **Ephemeral Storage**: Monitor storage usage and set limits if necessary to prevent potential issues.
-3. **Node Monitoring**: Implement a monitoring solution to keep track of node health and performance metrics.
+### Recommendations
 
-### 🚀 Pod-Level Configurations
-- **No AVS Pods Found**: There are no Aerospike Vector Search pods running on this node.
+#### 1. Node-Level Optimizations
+- **Resource Utilization:** The node is underutilized in terms of CPU and memory. Consider deploying additional workloads or resizing the instance to optimize costs.
+- **Monitoring:** Ensure continuous monitoring is in place to detect any future resource pressure or failures.
 
-### 🛠️ Recommendations for Pod-Level Configurations
-1. **Pod Scheduling**: Ensure AVS pods are scheduled on nodes with sufficient resources by using node selectors or affinity rules.
-2. **Resource Requests**: Define appropriate CPU and memory requests/limits for AVS pods to prevent resource contention.
+#### 2. Pod-Level Configurations
+- **AVS Pods:** Since no AVS pods are present, ensure that the deployment strategy aligns with the expected node roles and labels. Verify that the node selector or affinity settings in your deployment configuration are correctly targeting this node if AVS pods are intended to run here.
 
-### 📈 Resource Allocation Adjustments
-1. **CPU and Memory**: Adjust resource requests and limits based on the actual usage patterns observed in the monitoring data.
-2. **Pod Distribution**: Balance the pod distribution across nodes to optimize resource utilization.
+#### 3. Resource Allocation Adjustments
+- **CPU and Memory Requests:** Consider adjusting requests and limits to better match actual usage, allowing for more efficient scheduling and resource utilization.
 
-### 🔧 Performance Improvements
-1. **Node Autoscaling**: Consider enabling cluster autoscaling to dynamically adjust the number of nodes based on workload demands.
-2. **Instance Type**: Evaluate if the current instance type (m5.xlarge) meets the performance requirements or if an upgrade is necessary.
+#### 4. Performance Improvements
+- **Instance Type:** Evaluate if the current instance type (m5.xlarge) is optimal for your workload. If underutilized, consider a smaller instance type.
 
-### 🧠 JVM Memory Settings (Hypothetical for AVS Pods)
-- **Initial Heap Size (-Xms)**: Ensure it is set to a reasonable value based on pod memory requests.
-- **Maximum Heap Size (-Xmx)**: Align with the memory limits to prevent OOM errors.
-- **GC Settings**: Use appropriate garbage collection settings for optimal performance.
+#### 5. JVM Memory Settings
+- **JVM Configuration:** Since there are no AVS pods, JVM settings are not applicable. However, ensure that any future deployments have optimized JVM settings for heap size, GC, and other performance-related configurations.
 
-### Conclusion
-The node is in good health with no immediate issues. However, there are no AVS pods currently running on this node. Ensure that when AVS pods are deployed, they are configured with appropriate resource requests and limits to maintain optimal performance.
+### 🌟 Conclusion
+The node `ip-192-168-53-124.ec2.internal` is healthy and underutilized. There are no Aerospike Vector Search pods currently running, indicating a potential misconfiguration or deployment strategy issue. Adjustments in resource allocation and potential resizing of the node could lead to cost savings and improved efficiency.
